# Gridcoin-Research

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGES  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  CompilingGridcoinOnLinux.txt  INSTALL  Makefile.Debug  Makefile.Release  Makefile.am  README.md  SECURITY.md  VULNERABILITY_RESPONSE_PROCESS.md  actions.yml  autogen.sh  build_targets.sh  configure.ac  gridcoinresearch.pro  gridcoinstake.pro  install_dependencies.sh  object_script.gridcoinresearch.Debug  object_script.gridcoinresearch.Release  object_script.gridcoinstake.Debug
doc/: CMakeLists.txt  Doxyfile.in  README  README.md  README_doxygen.md  README_osx.md  README_windows.txt  assets-attribution.md  assets-attribution.txt  automated_greylisting_design_highlights.md  bitcoin_dependencies.dot  block_corruption_recovery_design.md  block_corruption_recovery_test_log.md  build-freebsd.md  build-macos.md  build-msw.txt  build-msys2.md  build-openbsd.md  build-osx.md  build-osx.txt  build-unix.md  build-unix.txt  build-windows.md  cmake-options.md  coding.txt  consensus.md  contract_registry_locking_design.md  developer-notes.md  gitian-building.md  gridcoinresearch.1  gridcoinresearch.conf.md  gridcoinresearchd.1  gui_event_queue_design.md  gui_event_queue_report.md  init.md  readme-qt.rst  regtest.md  release-process.md  running.md  stake-miner.txt  (+5 more)
src/: CMakeLists.txt  Makefile.am  Makefile.include.objs  Makefile.include.test  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  Upgrader_Makefile  Upgrader_Makefile_MinGW  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  alert.cpp  alert.h  amount.h  appcache.cpp  appcache.h  arith_uint256.cpp  arith_uint256.h  backup.cpp  backup.h  banman.cpp  banman.h  base58.cpp  base58.h  beacon.cpp  beacon.h  bignum.h  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  block.cpp  block.h  boinc.cpp  boinc.h  chainparams.cpp  chainparams.h  (+150 more)
src/ScraperProxy/: README.md  scraper-standalone.cpp  scraper.cpp  scraper.h  scraper_obsolete.cpp
src/bdb53/: CMakeLists.txt  README
src/chilkat/: license.txt
src/compat/: assumptions.h  byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/config/: gridcoin-config.h.cmake.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/contract/: contract.cpp  contract.h  cpid.cpp  cpid.h  message.cpp  message.h  polls.cpp  polls.h  rain.cpp  rain.h  rpccontract.cpp  superblock.cpp  superblock.h
src/crypto/: CMakeLists.txt  aes.cpp  aes.h  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  common.h  hmac_sha256.h  hmac_sha512.h  poly1305.cpp  poly1305.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_arm_shani.cpp  sha256_avx2.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha256_x86_shani.cpp  sha3.h  sha512.cpp  sha512.h  siphash.cpp  siphash.h
src/curl/: Makefile.in
src/gridcoin/: account.h  appcache.cpp  appcache.h  backup.cpp  backup.h  beacon.cpp  beacon.h  block.cpp  block.h  block_index.h  boinc.cpp  boinc.h  boinc_rpc.cpp  boinc_rpc.h  claim.cpp  claim.h  contract.h  cpid.cpp  cpid.h  fwd.h  gridcoin.cpp  gridcoin.h  magnitude.h  md5.c  md5.h  mnemonics.cpp  mnemonics.h  mrc.cpp  mrc.h  pool.cpp  pool.h  project.cpp  project.h  protocol.cpp  protocol.h  quorum.cpp  quorum.h  researcher.cpp  researcher.h  rpccontract.cpp  (+11 more)
src/index/: disktxpos.h  txindex.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: CMakeLists.txt
src/libzip/: Makefile.in  config.h.in  configure  libzip.sln  libzip.vcxproj  libzip.vcxproj.filters
src/neuralnet/: account.h  beacon.cpp  beacon.h  claim.cpp  claim.h  contract.cpp  contract.h  cpid.cpp  cpid.h  greylist.cpp  greylist.h  magnitude.h  neuralnet.cpp  neuralnet.h  neuralnet_native.cpp  neuralnet_native.h  neuralnet_stub.cpp  neuralnet_stub.h  neuralnet_win.cpp  neuralnet_win.h  project.cpp  project.h  quorum.cpp  quorum.h  researcher.cpp  researcher.h  superblock.cpp  superblock.h  tally.cpp  tally.h  tx_message.h
src/node/: blockstorage.cpp  blockstorage.h  coherence.cpp  coherence.h  orphan_blocks.cpp  orphan_blocks.h  ui_interface.cpp  ui_interface.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h
src/primitives/: transaction.cpp  transaction.h
src/qt/: CMakeLists.txt  Diagnose.cpp  Diagnose.h  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  balancecopyfilter.cpp  balancecopyfilter.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clicklabel.cpp  clicklabel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  consolidateunspentdialog.cpp  consolidateunspentdialog.h  consolidateunspentwizard.cpp  consolidateunspentwizard.h  consolidateunspentwizardselectdestinationpage.cpp  consolidateunspentwizardselectdestinationpage.h  (+113 more)
src/rpc/: blockchain.cpp  blockchain.h  client.cpp  client.h  dataacq.cpp  dump.cpp  htlc.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  psgt.cpp  rawtransaction.cpp  server.cpp  server.h  util.cpp  util.h  voting.cpp  wallet.cpp
src/scraper/: .gitignore  LICENSE  compile.sh  fwd.h  http.cpp  http.h  scraper-standalone.cpp  scraper.cpp  scraper.h  start.sh
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/support/: cleanse.cpp  cleanse.h  lockedpool.cpp  lockedpool.h
src/test/: CMakeLists.txt  Checkpoints_tests.cpp  DoS_tests.cpp  README  README.md  accounting_tests.cpp  addrman_tests.cpp  allocator_tests.cpp  appcache_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  beacon_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  (+47 more)
(+8395 files in other folders)
